--- a/appupdater.json
+++ b/appupdater.json
@@ -1,1 +1,1 @@
-{"versionName":"2.0","versionCode":2,"Note":"“Learn as if you will live forever, live like you will die tomorrow.” —Mahatma Gandhi","link":"your--google drive -- direct download link"}
+{"versionName":"2.0","versionCode":2,"Note":"“Learn as if you will live forever, live like you will die tomorrow.” —Mahatma Gandhi","link":"https://www.google.com"}
